CHANGES IN VERSION 1.5.1
------------------------
 o import ggtitle from ggplot2 <2012-09-07, Fri> 
 o update codes of plot functions accompaning with ggplot2 (version 0.9.2) <2012-09-06, Thu> 
 o bug fixed of buildGOmap due to the empty GO annotation query from biomaRt <2012-07-18, Wed>

Changes IN VERSION 1.5.0
------------------------
 o bump up version to 1.5.0 for BioC 2.11 devel
 o add URL in DESCRIPTION
 o update citation and add biocView GeneSetEnrichment <2012-05-09, Wed>
 o support zebrafish <2012-05-18, Mon>

 CHANGES IN VERSION 1.3.15
------------------------
 o add support to organsims other than human, mouse, and yeast. <2012-03-22, Thu>
 o add GFFparser.R, which provide function Gff2GeneTable to parse Gff files and
   build gene information table.<2012-03-22, Thu>
 o add function buildGOmap for building GO mapping files for unsurported organisms,
   which can be analyzed now. <2012-03-22, Thu>
 o add vignette explaining how to run GO analysis for unsupported organism. <2012-03-12, Thu>

CHANGES IN VERSION 1.3.14
------------------------
 o re-implement enrichGO by import enrich.internal in DOSE
   implement S3 methods for mapping IDs for GO analysis. <2012-03-18, Sun>
 o re-implement enrichKEGG by import enrich.internal in DOSE
   implement S3 methods for mapping IDs for KEGG analysis. <2012-03-19, Mon>
 o re-implement groupGOResult class by extended from enrichResult,
   and modified groupGO by using S3 methods designed for enrichGO. <2012-03-19,Mon>
 o bug fixed for importing setReadable<- instead of setReadable. <2012-03-20, Tue>
 o bug fixed of TERM2NAME.GO. <2012-03-21, Wed>

CHANGES IN VERSION 1.3.13
------------------------
 o import plot summary from stats4, for BiocGenerics (version 0.1.10)
   removed them <2012-03-03, Sat>

CHANGES IN VERSION 1.3.12
------------------------
 o fixed BibTeX database file .bib.
   month = , must be month = someMonth, or totally deleted,
   leave it blank will cause texi2dvi failed. <2012-03-01, Thu>
